force-app/main/default/objects/Price_Per_Point_Checks__c/Price_Per_Point_Checks__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>[QLSF-333] Loyalty: To be used by Validation Rule Opportunity.Loyalty_Check_Points_Price to check if Price_Per_Point__c is too low,</description>
    <label>Price Per Point Checks</label>
</CustomObject>