force-app/main/default/objects/Price_Per_Point_Checks__c/fields/Amount_1__c.field-meta.xml
<CustomField>
    <fullName>Amount_1__c</fullName>
    <defaultValue>100000</defaultValue>
    <description>[QLSF-333] Loyalty: To represent Lowest Amount to be checked as on 7th Nov 2017.</description>
    <label>Amount 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>