force-app/main/default/objects/Price_Per_Point_Checks__c/fields/Price_Per_Point_below_1__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Point_below_1__c</fullName>
    <defaultValue>0.0180</defaultValue>
    <description>[QLSF-333] Loyalty: Price Per Point below Amount 1</description>
    <label>Price Per Point below 1</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>