force-app/main/default/objects/Price_Per_Point_Checks__c/fields/Price_Per_Point_between_2_3__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Point_between_2_3__c</fullName>
    <defaultValue>0.0135</defaultValue>
    <description>[QLSF-333] Loyalty: Price Per Point between Amount 2 &amp; 3</description>
    <label>Price Per Point between 2 &amp; 3</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>